core/renderloop: take vrr into account for output layer repaints

Otherwise, every software cursor move triggers the next frame to be presented ASAP,
breaking adaptive sync while the cursor is moved.

BUG: 499848
FIXED-IN: 6.3.2