src/core/outputlayer.cpp
@@ -51,7 +51,7 @@ void OutputLayer::addRepaint(const QRegion &region)
 {
     m_repaints += region;
     if (m_output) {
-        m_output->renderLoop()->scheduleRepaint(nullptr, nullptr);
+        m_output->renderLoop()->scheduleRepaint(nullptr, nullptr, this);
     }
 }
 
